# sptrader-chart-lib

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  push-to-github.sh  run-demo.sh  tsconfig.json  tsup.config.ts
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  main.tsx
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: candle_monitor.rs  main.rs
src-tauri/src/candles/: cache.rs  commands.rs  mod.rs
src-tauri/src/market_data/: commands.rs  mod.rs  pipeline.rs  symbols.rs
src-tauri/src/market_data/historical/: catchup_ingester.py  requirements.txt
src-tauri/src/market_data/ingesters/: kraken.rs  mod.rs  oanda.rs
src/components/: CountdownTimer.tsx  MarketDataChart.tsx  PairSelector.tsx  index.ts
src/constants/: index.ts  timeframes.ts
src/hooks/: index.ts  useAutoTimeframeSwitch.ts  useChartData.ts  useChartSessionPersistence.ts  useChartSetup.ts  useChartZoom.ts  useCountdownTimer.ts  useInitialChartState.ts  usePlaceholderCandle.ts
src/machines/: chartStateMachine.ts  index.ts
src/pages/: MarketChartPage.tsx  index.ts
src/services/: ChartDataCoordinator.ts  index.ts  mockTauriApi.ts  tauriWrapper.ts
src/stores/: index.ts  useChartStore.ts  useTradingStore.ts
src/types/: index.ts  tauri.d.ts
src/utils/: chartHelpers.ts  index.ts
test-app/: index.html  package.json
