[package]
name = "sptraderb"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
arrow = "54.2"
parquet = "54.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
async-trait = "0.1"
redis = { version = "0.24", features = ["tokio-comp", "streams"] }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tempfile = "3.8"
futures = "0.3"
tokio-tungstenite = "0.23"
futures-util = "0.3"
dirs = "5.0"
